Dijkstra - Dials Implementation hinzugefügt